// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampOrderDetailsRoute renders ramps details instead of children when an order matches 1`] = `
<div
  data-item-type="rampBuy"
  data-order-id="order-1"
  data-testid="header"
/>
`;

exports[`RampOrderDetailsRoute renders ramps details instead of children when an order matches 2`] = `
<div
  data-item-type="rampBuy"
  data-order-id="order-1"
  data-testid="ramp-order-details"
/>
`;
